# minibreak

./: Cargo.toml  README.md  install.sh
.github/workflows/: rust_build.yml
src/: main.rs
src/paper_source/: bing.rs  download.rs  mod.rs
src/wallpaper_fast/: fallback.rs  macos.rs  mod.rs  windows.rs
