[package]
name = "minibreak"
version = "0.1.3"
authors = ["Lai Zn<laizenan@gmail.com"]
edition = "2021"
description = "lightweight cli tool `minibreak` to wash your eyes before taking a break during heavy work."
license = "GPL-3.0-only"
homepage = "https://github.com/lonelam/minibreak"
repository = "https://github.com/lonelam/minibreak"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["serde_derive"] }
serde_json = "1.0.111"
serde_repr = "0.1.18"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = ["Win32_System", "Win32_System_Com", "Win32_UI_Shell", "Win32_Foundation"] }

[target.'cfg(not(windows))'.dependencies]
wallpaper = "3.2.0"

[[bin]]
name = "minibreak"
path = "src/main.rs"